challenge/apps/todo-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-client
  labels:
    app: todo-client
spec:
  ports:
  - name: http
    port: 8082
  selector:
    app: todo-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-client
  labels:
    app: todo-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-client
  template:
    metadata:
      labels:
        app: todo-client
        version: v1
    spec:
      containers:
      - name: todo-client
        image: atsistemas/todo-client:0.3
        ports:
          - containerPort: 8082
            name: http
            protocol: TCP
      imagePullPolicy: Always
