challenge/apps/networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todo-client-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-client
  labels:
    app: todo-client
spec:
  hosts:
  -  "*"
  gateways:
  - todo-client-gateway
  http:
  - route:
    - destination:
        host: todo-client
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-repo
  labels:
    app: todo-repo
spec:
  hosts:
  - todo-repo
  http:
  - route:
    - destination:
        host: todo-repo
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todo-client
  labels:
    app: todo-client
spec:
  host: todo-client
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todo-repo
  labels:
    app: todo-repo
spec:
  host: todo-repo
  subsets:
  - name: v1
    labels:
      version: v1
