challenge/apps/todo-repo.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-repo
  labels:
    app: todo-repo
spec:
  ports:
  - name: http
    port: 8081
  selector:
    app: todo-repo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-repo
  labels:
    app: todo-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-repo
  template:
    metadata:
      labels:
        app: todo-repo
        version: all-ok
    spec:
      containers:
      - name: todo-repo
        image: atsistemas/todo-repo:0.3
        ports:
          - containerPort: 8081
            name: http
            protocol: TCP
      imagePullPolicy: Always
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: todo-repo
  name: todo-repo
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: todo-repo
